tests/snapshots/cli_adopt__adopt_commit.snap
---
source: tests/cli_adopt.rs
expression: r.stdout
---
adopt: <HOME>/.config/hypr into profile `mine`

observed:
  real directory <HOME>/.config/hypr
  2 director(ies), 3 file(s), 1 symlink(s), 52 byte(s)

  1 file(s) only their owner can read. a mode-600 file in a config tree is
  usually a token or a key; consider declaring it `volatile` so its content is
  not hashed into a manifest:
    0600  secret.token

about to do:
  copy         <HOME>/.config/hypr -> <HOME>/.local/share/ricepilot/profiles/mine/hypr
  verify       the copy against the original, with a blake3 manifest
  stage link   <HOME>/.config/hypr.rp-tmp-0 -> <HOME>/.local/share/ricepilot/profiles/mine/hypr
  exchange     <HOME>/.config/hypr <-> <HOME>/.config/hypr.rp-tmp-0
  to attic     <HOME>/.config/hypr.rp-tmp-0 -> <attic><HOME>/.config/hypr
  fsync dir    <HOME>/.config
  fsync dir    <HOME>/.local/state/ricepilot/attic/<TS>

the directory is **moved** into the attic, not removed. ricepilot has no
delete, so what is displaced is always still somewhere you can read it.
turn <HOME>/.config/hypr into a link into profile `mine`, moving the directory to the attic? [y/N] yes

adopted. <HOME>/.config/hypr is now a link into profile `mine`.
this is generation 0001.

copied into the profile: 2 director(ies), 3 file(s), 1 symlink(s), 52 byte(s)
  reflinked: <depends on the filesystem>
the copy was compared against the original with a blake3 manifest before the
directory was moved.

your original directory is at:
  <HOME>/.local/state/ricepilot/attic/<TS><HOME>/.config/hypr
nothing was removed. to undo this, move that directory back yourself:
  ricepilot recover      (only while something is in flight)
  mv -nT <the path above> <HOME>/.config/hypr   after moving the link aside

`ricepilot rollback` does not undo an adopt. it re-applies the previous generation,
which did not have this destination — so it would displace the new link into the
attic and leave the path empty, not put your directory back.

the rescue script now restores generation 0000:
  sh <HOME>/.local/state/ricepilot/rescue.sh
