tests/snapshots/cli_adopt__adopt_then_show.snap
---
source: tests/cli_adopt.rs
expression: shown.stdout
---
profile:      mine
root:         <HOME>/.local/share/ricepilot/profiles/mine (owned payload)
hypr dialect: (unset)
requires:     (none)

paths:
  dir-link   relogin  <HOME>/.config/hypr <- <HOME>/.local/share/ricepilot/profiles/mine/hypr

volatile globs (excluded from hashing):
  (none)

generated paths (never linked, never profile content):
  (none)
